# module-path-manager

./: LICENSE  README.md  pyproject.toml
example/: main.py
example/module1/: a.py
example/module2/: b.py
example/module3/test/: c.py
module_path_manager/: __init__.py
